# freegs-profiledownloader

./: .gitignore  LICENSE  README.md  build-local-windows.ps1  build-windows.ps1  index.html  installer.nsi  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-linux-github.yml  build-windows-github.yml  build-windows.yml  build.yml
docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  REPOSITORY.md
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AboutView.tsx  Header.tsx  InstalledView.tsx  ProfileListView.tsx  ScannerView.tsx  SettingsView.tsx  Sidebar.tsx
src/types/: index.ts
